# madm

./: .gitignore  CLAUDE.md  PROMPT_COMPARISON.md  PROPOSED_CHANGES.md  pyproject.toml  run_local.sh  stage_1.py  test_coefficients.py  test_layers.py
FEVEROUS/: base_Qwen3-8B.csv
LendingClub/: auditor_Qwen2.5-1.5B-Instruct.csv  auditor_Qwen2.5-7B-Instruct.csv  auditor_Qwen3-4B.csv  auditor_gpt-5-nano-2025-08-07.csv  base_Qwen2.5-7B-Instruct.csv  base_Qwen3-4B.csv  base_Qwen3-8B.csv  base_ft:gpt-4o-mini-2024-07-18:mit-ide:lendingclub:DDBReFWb.csv  rf_Qwen2.5-1.5B-Instruct.csv  rf_Qwen3-14B.csv  rf_gpt-5-mini-2025-08-07.csv
MoralMachine/: auditor_Qwen3-4B.csv  base_Qwen2.5-7B-Instruct.csv  base_Qwen3-14B.csv  base_Qwen3-4B.csv  base_gpt-5-mini-2025-08-07.csv  rf_Qwen3-1.7B.csv  rf_Qwen3-8B.csv  rf_gpt-5-nano-2025-08-07.csv
MovieLens/: auditor_Qwen2.5-1.5B-Instruct.csv  auditor_Qwen2.5-7B-Instruct.csv  auditor_gpt-5-mini-2025-08-07.csv  base_Qwen2.5-1.5B-Instruct.csv  base_Qwen3-1.7B.csv  base_glm-4-9b-chat-hf.csv  base_gpt-5-mini-2025-08-07.csv  ols_Qwen2.5-7B-Instruct.csv  ols_Qwen3-1.7B.csv  ols_Qwen3-8B.csv
WikipediaToxicity/: auditor_Qwen3-14B.csv  auditor_Qwen3-4B.csv  auditor_Qwen3-8B.csv  auditor_gpt-5-nano-2025-08-07.csv  base_Qwen3-1.7B.csv  base_glm-4-9b-chat-hf.csv
cluster/: backfill_glm4.slurm  backfill_gpt5.slurm  finetune.slurm  neural_activation_adversarial_quick.slurm  neural_activation_auditor.slurm  neural_activation_auditor_quick.slurm  run_4o_mini_base.slurm  run_FEVEROUS_qwen35.slurm  run_HotelBookings_qwen35.slurm  run_JFLEG_qwen35.slurm  (+61 more)
(+2164 files in other folders)
