[project]
name = "madm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "plotly",
    "kaleido",
    "tqdm",
    "openai",
    "dotenv",
    "google-genai",
    "datasets",
    "transformers",
    "trl",
    "accelerate",
    "torch",
    "matplotlib",
    "scikit-learn",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
]
