[project]
name = "madm"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy",
    "pandas",
    "plotly",
    "kaleido",
    "tqdm",
    "openai",
    "dotenv",
    "google-genai",
    "datasets",
    "transformers",
    "trl",
    "accelerate",
    "torch",
    "matplotlib",
    "scikit-learn",
]
